# HTTP_READING

./: CMakeLists.txt  HISTORY.md  fault.md  logger.cpp  logger.h  main.cpp  pthread.cpp
java_src/: cookies.txt  pom.xml  日志.md
java_src/src/main/java/com/example/httpreading/: HttpReadingApplication.java
java_src/src/main/java/com/example/httpreading/api/: CommonResponse.java  GlobalExceptionHandler.java
java_src/src/main/java/com/example/httpreading/config/: AppConfig.java  LoginInterceptor.java  WebMvcConfig.java
java_src/src/main/java/com/example/httpreading/controller/: AiReadingController.java  AuthController.java  BookController.java  HttpController.java  ReadingController.java  SseController.java  UserBookshelfController.java
java_src/src/main/java/com/example/httpreading/domain/entity/: Book.java  Chapter.java
java_src/src/main/java/com/example/httpreading/domain/user/: Bookshelf.java  ReadingProgress.java  User.java
java_src/src/main/java/com/example/httpreading/repository/: BookRepository.java  BookshelfRepository.java  ChapterRepository.java  ReadingProgressRepository.java  UserRepository.java
java_src/src/main/java/com/example/httpreading/service/: AiReadingService.java  BookQueryService.java  BookService.java  BookshelfService.java  ChatService.java  ImageService.java  ModelClient.java  PageService.java  PdfService.java  ReadingService.java  SseHub.java  UserService.java
java_src/src/main/resources/: application.yml
java_src/src/main/resources/static/: api-demo.html  reader.html
tools/: import_books.py
web/: bookstore.html  chatroom.html  test.html
